Changes in 4.9.0 (upcoming)

* Changed: Minimum system requirements increased to PHP 5.6.
* Changed: Minimum system requirements increased to MySQL 5.5.
* Added: Option to define a comprehensive Content Security Policy header for the
  Textpattern admin-side via config.php.
* Added: PHPMailer for third-party SMTP delivery. See Admin>Preferences>Mail.
* Added: Plugins can be uploaded from a URL by dragging to upload textarea.
* Added: Compiled plugins can be uploaded via Browse... feature.
* Changed: Plugins of all types trigger verify step.
* jQuery 3.6.0.

Changes in 4.8.8 (upcoming)

* Maintenance release including improvements for PHP 8.1 and bug fixes.
* Fixed: More robust numeric searches.
* Fixed: Required parameters after optional in tag builder (thanks, phiw13).
* Fixed: Admin-side pagination when sorting by non-unique values.
* Added: 'url_title' attribute to <txp:article[_custom] />.
* Added: Substring extraction via 'escape' attribute.
* Added: 'date' and 'time' attributes to <txp:if_expired />.
* Added: 'range' attribute to <txp:article_image />.
* Added: Expanded conditional 'match' attribute with comparison operators.
* Accessibility: Additional 'aria-label' attributes for various internal links.
* Internal: Removed FOUND_ROWS() which is deprecated in MySQL 8.0.17.
* Internal: Prefer is_readable() and is_file() to file_exists().
* PrismJS 1.24.1.

Changes in 4.8.7 (30 May 2021)

* High priority maintenance release to address functionality and setup issues
  discovered after 4.8.6 release.
* Fixed: Users panel throws error due to missing DB prefix (thanks, prbt2016).
* Removed: Database user GRANT check during initial setup, which broke some
  installations.
* Changed: Context check priority in tags.

Changes in 4.8.6 (28 May 2021)

* DO NOT USE IN PRODUCTION - issues discovered after release, use 4.8.7 instead.
* Maintenance release with bug fixes.
* Fixed: Regression in override form usage in lists (thanks, Christian Rapp).